--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
